Fix background-color for selects in dark mode

--- a/docs/assets/css/main2.scss
+++ b/docs/assets/css/main2.scss
@@ -24,5 +24,5 @@
   background-color: rgb(67, 64, 64);
 }
 #aw2-keyboard-layout {
-  background-color: "#000";
+  background-color: #000000;
 }
